<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TeachersEssentials</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">Work in progress…</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Einstellungen</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Stundenplan</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="night_theme">Night Theme</string>
    <string name="benachrichtigungen">Benachrichtigungen</string>
    <string name="benachrichtigungen_deaktiviert">Benachrichtigungen deaktiviert</string>
    <string name="schriftgroesse">Schriftgröße</string>
    <string name="feierabend">Feierabend</string>
    <string name="app_schliessen">App schließen</string>
    <string name="einstellungen_zuruecksetzen">Einstellungen zurücksetzen</string>
    <string name="stunde_einfuegen">+</string>
    <string name="subject">subject</string>
    <string name="room">room</string>
    <string name="speichern">Speichern</string>
    <string name="fach">Fach</string>
    <string name="raum">Raum</string>
    <string name="klasse">Klasse</string>
    <string name="farbe">Farbe</string>
    <string name="test">Test</string>
    <string name="channel_name">notifications_channel</string>
    <string name="channel_description" tools:ignore="Typos">Alle Nachrichten, die die App versendet</string>
    <string name="alertPermissionHeadline">Berechtigung Abgelehnt</string>
    <string name="alertPermissionText">Um Nachrichten senden zu können benötigt TeachersEssentials die Erlaubnis dazu. Diese können Sie in den Einstellungen geben.</string>
    <string name="ok">OK</string>
    <string name="loeschen">Löschen</string>
    <string name="plus">+</string>
    <string name="day_lesson">Tag, Stunde</string>
    <string name="hinzufuegen">Hinzufügen</string>
    <string name="woche">Woche</string>
    <string name="tag">Tag</string>

</resources>